# RayTracer2D

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/core/: colour.cc  colour.h  image.cc  image.h  light.h  material.h  options.h  point.h  ray.cc  ray.h  ray_tracer.cc  ray_tracer.h  scene.cc  scene.h  shape.h
src/light/: laser_light.cc  laser_light.h  point_light.cc  point_light.h
src/material/: reflective.cc  reflective.h  refractive.cc  refractive.h  scattering.cc  scattering.h
src/shapes/: circle.cc  circle.h  wall.cc  wall.h
src/utils/: constants.h  macros.h
test/: circle_test.cc
